@@ -1,3 +1,6 @@
+* Fixed mispelling of calendared attributes.
+* Added update and delete methods to V2::AccountManagerTodo.
+
 === 0.5.27
 
 * Fixed V2 require statement for category_default_offer_template.
